<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"

                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_logo_24dp"/>

            <EditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:textColorHint="@color/colorTextHint"
                android:maxLines="1"
                android:hint="@string/txt_signup_phone"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_phone_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9dbd7"/>

            <EditText
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:textColorHint="@color/colorTextHint"
                android:maxLines="1"
                android:hint="@string/txt_signup_user"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_user_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9dbd7"/>
            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:textColorHint="@color/colorTextHint"
                android:maxLines="1"
                android:hint="@string/txt_signup_pass"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_lock_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9dbd7"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSure"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/btn_signup_sure"
                    android:padding="16dp"
                    android:clickable="true"/>
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/btn_signup_cancel"
                    android:padding="16dp"
                    android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>